# aoc-2021-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main_action.yml
aoc_inputs/: README.md
src/: lib.rs  main.rs
src/days/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  mod.rs
